--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -58,7 +58,8 @@ ul#swiper {
 .top-image { margin-top: 80px; }
 
 
-.background {
+.mobile-container {
+/*
 position: absolute;
 z-index: -1;
 
@@ -66,6 +67,7 @@ margin: 0px;
 padding: 0px;
 width: 100%;
 height: 100%;
+*/
 
 background: #ebffff; /* Old browsers */
 background: -moz-linear-gradient(top,  #ebffff 0%, #66cef3 100%); /* FF3.6+ */
