--- a/assets/css/familia.css
+++ b/assets/css/familia.css
@@ -1,7 +1,7 @@
 
-#panel { text-align: center; }
+.panel { text-align: center; }
+.small.whiteButton { width: 300px; height: 25px; display: block; }
 
-.mobile-container { margin-top: 10px; border-radius: 10px; box-shadow: 0px 0px 10px #333 inset;  }
 .mobile-container div.description { float: left;margin-top: 10px; }
 .mobile-container div.description p.name { font-size: 20px; color: #333; }
 .mobile-container div.description p.location { font-size: 14px; color: #777; text-shadow: 1px 1px 0px white; }
