--- a/assets/css/gradients.css
+++ b/assets/css/gradients.css
@@ -12,3 +12,15 @@ background-image: -webkit-gradient(
 	color-stop(0.67, #FFFFFF),
 	color-stop(0.84, #FFFFFF)
 );}
+
+
+.clean.blue {
+background: #ebffff; /* Old browsers */
+background: -moz-linear-gradient(top,  #ebffff 0%, #66cef3 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ebffff), color-stop(100%,#66cef3)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #ebffff 0%,#66cef3 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #ebffff 0%,#66cef3 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #ebffff 0%,#66cef3 100%); /* IE10+ */
+background: linear-gradient(top,  #ebffff 0%,#66cef3 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ebffff', endColorstr='#66cef3',GradientType=0 ); /* IE6-9 */
+}
