--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -58,8 +58,7 @@ ul#swiper {
 .top-image { margin-top: 80px; }
 
 
-.mobile-container {
-/*
+.background {
 position: absolute;
 z-index: -1;
 
@@ -67,16 +66,6 @@ margin: 0px;
 padding: 0px;
 width: 100%;
 height: 100%;
-*/
-
-background: #ebffff; /* Old browsers */
-background: -moz-linear-gradient(top,  #ebffff 0%, #66cef3 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ebffff), color-stop(100%,#66cef3)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  #ebffff 0%,#66cef3 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  #ebffff 0%,#66cef3 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  #ebffff 0%,#66cef3 100%); /* IE10+ */
-background: linear-gradient(top,  #ebffff 0%,#66cef3 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ebffff', endColorstr='#66cef3',GradientType=0 ); /* IE6-9 */
 }
 
 .mobile-container { margin-top: 10px; border-radius: 10px; box-shadow: 0px 0px 10px #333 inset;  }
